--- a/Reneuve_Mehdi_Projet_3/html/index.html
+++ b/Reneuve_Mehdi_Projet_3/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/39de2a3117.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Reneuve_Mehdi_Projet_3/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <i class="fas fa-circle-notch fa-3x fa-spin"></i>
     </div>
     <header>
-        <img src="images/logo/ohmyfood.png" alt="">
+        <img src="/Reneuve_Mehdi_Projet_3/images/logo/ohmyfood.png" alt="">
     </header>
 
     <div class="localisation">
@@ -57,7 +57,7 @@
                 <a href="page4.html">
                     <div class="carte">
                         <div class="new">Nouveau</div>
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                     
                         <div class="txt-heart">
                             <div class="txt">
@@ -72,7 +72,7 @@
                 <a href="page3.html">
                     <div class="carte">
                         <div class="new">Nouveau</div>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
                                 <h3>La note enchantée</h3>
@@ -85,7 +85,7 @@
                 </a>
                 <a href="page1.html">
                     <div class="carte">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
                                 <h3>À la francaise</h3>
@@ -98,7 +98,7 @@
                 </a>
                 <a href="page2.html">
                     <div class="carte">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
                                 <h3>La délice des sens</h3>
