--- a/Reneuve_Mehdi_Projet_3/html/page1.html
+++ b/Reneuve_Mehdi_Projet_3/html/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="page1.css">
+    <link rel="stylesheet" href="/Reneuve_Mehdi_Projet_3/css/page1.css">
     <script src="https://kit.fontawesome.com/39de2a3117.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,16 +17,16 @@
         <div class="arrow">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="images/logo/ohmyfood.png" alt="">
+        <img src="/Reneuve_Mehdi_Projet_3/images/logo/ohmyfood.png" alt="">
     </header>
     
     <div class="background">
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
         <div class="haut">
-            <p>Le déclice des sens</p>
+            <p>À la française</p>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeur2"></i>
                 <i class="fa-solid fa-heart coeur2"></i>
@@ -41,8 +41,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Tartare de thon</h2>
-                                <h4>Assaisonné au yuzu</h4>
+                                <h2>Tartare de poulpe acidulé</h2>
+                                <h4>Aux zestes d'orange</h4>
                             </div>
                             <div class="droite">
                                 <strong>25€</strong>
@@ -53,8 +53,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Bouchée de homard croustillant</h2>
-                                <h4>Et sa farandole de petits légumes</h4>
+                                <h2>Velouté de légumes d'antan</h2>
+                                <h4>Carotte, panais, topinambour</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -65,8 +65,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Velouté de cèpes</h2>
-                                <h4>Aux truffes</h4>
+                                <h2>Soupe à l'oignon</h2>
+                                <h4>Revisitée</h4>
                             </div>
                             <div class="droite">
                                 <strong>20€</strong>
@@ -84,8 +84,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Poulet rôti aux herbes de Provence</h2>
-                                <h4>Et sa crème de truffe</h4>
+                                <h2>Coquilles Saint-Jacques</h2>
+                                <h4>Accompagnées d'une purée de panais</h4>
                             </div>
                             <div class="droite">
                                 <strong>40€</strong>
@@ -96,8 +96,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Langouste rôtie</h2>
-                                <h4>Et ses légumes de saison</h4>
+                                <h2>Magret de canard</h2>
+                                <h4>Et parmentier de pommes de terre</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -108,8 +108,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Côte de boeuf Angus</h2>
-                                <h4>Et sa purée de panais</h4>
+                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                <h4>Sur son lit de gnocchis aux légumes</h4>
                             </div>
                             <div class="droite">
                                 <strong>44€</strong>
@@ -127,8 +127,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Farandole de desserts</h2>
-                                <h4>Du chef</h4>
+                                <h2>Pétales de violettes glacés</h2>
+                                <h4>Et purée de noisettes</h4>
                             </div>
                             <div class="droite">
                                 <strong>18€</strong>
@@ -139,8 +139,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Crème brulée</h2>
-                                <h4>Revisitée</h4>
+                                <h2>Fondant au chocolat</h2>
+                                <h4>Revisité</h4>
                             </div>
                             <div class="droite">
                                 <strong>22€</strong>
@@ -151,8 +151,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Tiramisu</h2>
-                                <h4> À la noisette</h4>
+                                <h2>Millefeuille croustillant</h2>
+                                <h4>Myrtilles et pâte d’amande</h4>
                             </div>
                             <div class="droite">
                                 <strong>23€</strong>
