--- a/Reneuve_Mehdi_Projet_3/html/page3.html
+++ b/Reneuve_Mehdi_Projet_3/html/page3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="page1.css">
+    <link rel="stylesheet" href="/Reneuve_Mehdi_Projet_3/css/page1.css">
     <script src="https://kit.fontawesome.com/39de2a3117.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +17,11 @@
         <div class="arrow">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="images/logo/ohmyfood.png" alt="">
+        <img src="/Reneuve_Mehdi_Projet_3/images/logo/ohmyfood.png" alt="">
     </header>
     
     <div class="background">
-        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
